--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^6.7.2",
     "express-rate-limit": "^5.0.0",
     "helmet": "^3.21.2",
+    "node-cron": "^2.0.3",
     "nodemon": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
